Add basic camera settings to UI for testing (#18690)
* add basic camera add/edit pane to the UI for testing

* only init model runner if transcription is enabled globally

* fix role checkboxes

--- a/web/public/locales/en/views/settings.json
+++ b/web/public/locales/en/views/settings.json
@@ -241,6 +241,7 @@
       "name": "Camera Name",
       "nameRequired": "Camera name is required",
       "nameLength": "Camera name must be less than 24 characters.",
+      "nameInvalid": "Camera name must contain only letters, numbers, underscores, or hyphens",
       "namePlaceholder": "e.g., front_door",
       "enabled": "Enabled",
       "ffmpeg": {
