feat: allow sharing a link to a specific timestamp of a recording

--- a/web/public/locales/en/views/events.json
+++ b/web/public/locales/en/views/events.json
@@ -34,5 +34,12 @@
   "selected_one": "{{count}} selected",
   "selected_other": "{{count}} selected",
   "camera": "Camera",
-  "detected": "detected"
+  "detected": "detected",
+  "details": {
+    "item": {
+      "button": {
+        "share": "Share this recording"
+      }
+    }
+  }
 }
