feat: improved navigation state (#6)
move some of the state to the url to allow better navigation and shared view of the app

--- a/web/public/locales/en/views/events.json
+++ b/web/public/locales/en/views/events.json
@@ -36,5 +36,12 @@
   "camera": "Camera",
   "detected": "detected",
   "suspiciousActivity": "Suspicious Activity",
-  "threateningActivity": "Threatening Activity"
+  "threateningActivity": "Threatening Activity",
+  "details": {
+    "item": {
+      "button": {
+        "share": "Share this recording"
+      }
+    }
+  }
 }
