sync: misc fixes + docs lang updates (#13)
Co-authored-by: Nicolas Mowen <nickmowen213@gmail.com>
Co-authored-by: Josh Hawkins <32435876+hawkeye217@users.noreply.github.com>
Co-authored-by: András Farkas <68812986+Netesfiu@users.noreply.github.com>
Co-authored-by: 𝙃𝘼𝙍𝙍𝙔 <contact@harry.plus>
Co-authored-by: Blake Blackshear <blakeb@blakeshome.com>
Co-authored-by: Hosted Weblate <hosted@weblate.org>
Co-authored-by: Gabriel Vitorio Bernardo do Nascimento <gabri.vitorio@hotmail.com>
Co-authored-by: Helder Santana <helder.santana@systemsbr.com.br>
Co-authored-by: Ivan Martins Pereira <vodikus@users.noreply.hosted.weblate.org>
Co-authored-by: Languages add-on <noreply-addon-languages@weblate.org>
Co-authored-by: Regis Padua <regispadua@live.com>
Co-authored-by: Romulo Gatto <romulo.gatto@gmail.com>
Co-authored-by: Viktor Stier <viktor-stier@gmx.de>
Co-authored-by: George Betsis <gbetsis@gmail.com>
Co-authored-by: Артём Владимиров <artyomka71@gmail.com>
Co-authored-by: lukasig <lukasig@hotmail.com>
Co-authored-by: Eduard Frigola <eduardfrigola@yahoo.com>
Co-authored-by: Gerard Ricart Castells <gerard.ricart@gmail.com>
Co-authored-by: Michal K <michal@totaljs.com>
Co-authored-by: Rodrigo Suzana <rms.suzana@gmail.com>
Co-authored-by: Dávid Attila Balog <davidattilabalog@gmail.com>
Co-authored-by: Netesfiu <r4verino@gmail.com>
Co-authored-by: Ronen Atsil <atsil55@gmail.com>
Co-authored-by: Woody W <woody4165@gmail.com>
Co-authored-by: mikealanni <mikealanni@gmail.com>
Co-authored-by: Ichlasul Affan <ichlaffterlalu@gmail.com>
Co-authored-by: Zacky <athallahzacky0204@gmail.com>
Co-authored-by: Dagfinn Kolstad <dagfinn.kolstad@gmail.com>
Co-authored-by: Toni Liski <nacree@gmail.com>
Co-authored-by: Dalibor Radovanović <darkobg@gmail.com>
Co-authored-by: Daniel Lukáč <dlukac44@gmail.com>
Co-authored-by: Jakub K <klacanjakub0@gmail.com>
Co-authored-by: GuoQing Liu <842607283@qq.com>

--- a/web/public/locales/sv/views/system.json
+++ b/web/public/locales/sv/views/system.json
@@ -67,5 +67,10 @@
     "label": {
       "detect": "detektera"
     }
+  },
+  "title": "System",
+  "metrics": "System detaljer",
+  "general": {
+    "title": "Generellt"
   }
 }
