--- a/web/public/locales/en/views/settings.json
+++ b/web/public/locales/en/views/settings.json
@@ -194,6 +194,10 @@
       "title": "Streams",
       "desc": "Temporarily disable a camera until Caesar restarts. Disabling a camera completely stops Caesar's processing of this camera's streams. Detection, recording, and debugging will be unavailable.<br /> <em>Note: This does not disable go2rtc restreams.</em>"
     },
+    "genai": {
+      "title": "Generative AI",
+      "desc": "Temporarily enable/disable Generative AI for this camera. When disabled, AI generated descriptions will not be requested for tracked objects on this camera."
+    },
     "review": {
       "title": "Review",
       "desc": "Temporarily enable/disable alerts and detections for this camera until Caesar restarts. When disabled, no new review items will be generated. ",
