sync: time and storage cosmetics (#21)
Co-authored-by: Nicolas Mowen <nickmowen213@gmail.com>
Co-authored-by: Josh Hawkins <32435876+hawkeye217@users.noreply.github.com>
Co-authored-by: Blake Blackshear <blake@frigate.video>
Co-authored-by: Hosted Weblate <hosted@weblate.org>
Co-authored-by: pcislocked <git@pcislocked.net>
Co-authored-by: Cleiton Carvalho <cleitonsilvacarvalho@gmail.com>
Co-authored-by: Paulo Daltro <paulinhopcm15@gmail.com>
Co-authored-by: Rene-Olskjaer <rene@olskjaer.dk>
Co-authored-by: lukasig <lukasig@hotmail.com>
Co-authored-by: Plamen Stoyanov <fireto@gmail.com>
Co-authored-by: Lâm Lê <silamle6@gmail.com>
Co-authored-by: muki71 <exyusat71@gmail.com>
Co-authored-by: Jakub K <klacanjakub0@gmail.com>
Co-authored-by: forward-jt <juitse.huang@gmail.com>

--- a/web/public/locales/pt-BR/components/dialog.json
+++ b/web/public/locales/pt-BR/components/dialog.json
@@ -92,6 +92,26 @@
           "label": "Salvar esta pesquisa"
         }
       }
+    },
+    "video": {
+      "viewInHistory": "Ver no Histórico"
+    }
+  },
+  "export": {
+    "time": {
+      "fromTimeline": "Selecione da Linha do tempo",
+      "lastHour_one": "Última hora",
+      "lastHour_many": "Últimas {{count}} horas",
+      "lastHour_other": "Últimas {{count}} horas",
+      "custom": "Personalizado",
+      "start": {
+        "title": "Hora de Início",
+        "label": "Selecione a Hora de Início"
+      },
+      "end": {
+        "title": "Hora de Término",
+        "label": "Selecione a Hora de Término"
+      }
     }
   },
   "recording": {
