--- a/web/public/locales/ro/views/settings.json
+++ b/web/public/locales/ro/views/settings.json
@@ -804,7 +804,7 @@
     },
     "licensePlateRecognition": {
       "desc": "Frigate poate recunoaște numerele de înmatriculare ale vehiculelor și poate adăuga automat caracterele detectate în câmpul recognized_license_plate sau un nume cunoscut ca sub_etichetă pentru obiectele de tip mașină. Un caz de utilizare comun poate fi citirea numerelor de înmatriculare ale mașinilor care intră într-o curte sau ale celor care trec pe stradă.",
-      "title": "Recunoașterea numerelor de înmatriculare",
+      "title": "Recunoaștere numere de înmatriculare",
       "readTheDocumentation": "Citește documentația"
     },
     "title": "Setări îmbogățiri",
@@ -815,7 +815,7 @@
     },
     "restart_required": "Este necesară repornirea (setările de îmbogățiri au fost modificate)",
     "toast": {
-      "success": "Setările de îmbogățiri au fost salvate. Reporneste Frigate pentru a aplica modificările.",
+      "success": "Setările de îmbogățiri au fost salvate. Repornește Frigate pentru a aplica modificările.",
       "error": "Nu s-au putut salva modificările configurației: {{errorMessage}}"
     }
   },
@@ -846,7 +846,7 @@
       "zoneObjectAlertsTips": "Toate obiectele {{alertsLabels}} detectate în {{zone}} pe {{cameraName}} vor fi afișate ca alerte.",
       "objectDetectionsTips": "Toate obiectele {{detectionsLabels}} necategorisite pe {{cameraName}} vor fi afișate ca detecții, indiferent de zona în care se află.",
       "toast": {
-        "success": "Configurarea clasificării pentru revizuire a fost salvată. Repornește Frigate pentru a aplica modificările."
+        "success": "Configurația clasificării pentru revizuire a fost salvată. Repornește Frigate pentru a aplica modificările."
       },
       "selectAlertsZones": "Selectează zone pentru alerte",
       "noDefinedZones": "Nu sunt definite zone pentru această cameră.",
@@ -913,13 +913,13 @@
       "point_few": "{{count}} puncte",
       "point_other": "{{count}} de puncte",
       "clickDrawPolygon": "Fă click pentru a desena un poligon pe imagine.",
-      "label": "Mască de mișcare",
+      "label": "Măști de mișcare",
       "documentTitle": "Editează masca de mișcare - Frigate",
       "desc": {
         "documentation": "Documentație",
         "title": "Măștile de mișcare sunt folosite pentru a preveni ca anumite tipuri de mișcare nedorită să declanșeze detecția. Mascare excesivă va îngreuna urmărirea obiectelor."
       },
-      "add": "Mască de mișcare nouă",
+      "add": "Adaugă mască de mișcare",
       "edit": "Editează masca de mișcare",
       "context": {
         "documentation": "Citește documentația",
@@ -966,10 +966,10 @@
     "restart_required": "Repornire necesară (măști/zone modificate)",
     "toast": {
       "success": {
-        "copyCoordinates": "Coordonatele pentru {{polyName}} au fost copiate în clipboard."
+        "copyCoordinates": "Coordonatele pentru {{polyName}} au fost copiate."
       },
       "error": {
-        "copyCoordinatesFailed": "Nu s-au putut copia coordonatele în clipboard."
+        "copyCoordinatesFailed": "Nu s-au putut copia coordonatele."
       }
     },
     "filter": {
@@ -1078,7 +1078,7 @@
   "users": {
     "dialog": {
       "deleteUser": {
-        "warn": "Ești sigur că vrei să ștergi <strong>{{username}}</strong>?",
+        "warn": "Ești sigur că vrei să ștergi utilizatorul <strong>{{username}}</strong>?",
         "title": "Șterge utilizatorul",
         "desc": "Această acțiune nu poate fi anulată. Aceasta va șterge definitiv contul de utilizator și va elimina toate datele asociate."
       },
@@ -1137,7 +1137,7 @@
         "cannotBeEmpty": "Parola nu poate fi goală",
         "doNotMatch": "Parolele nu se potrivesc",
         "updatePassword": "Actualizează parola pentru {{username}}",
-        "setPassword": "Setează parola",
+        "setPassword": "Schimbă parola",
         "desc": "Creează o parolă puternică pentru a securiza acest cont."
       }
     },
@@ -1194,7 +1194,7 @@
     },
     "cameras": {
       "title": "Camere",
-      "desc": "Selectați camerele pentru care doriți să activați notificările.",
+      "desc": "Selectează camerele pentru care dorești să activezi notificările.",
       "noCameras": "Nu există camere disponibile"
     },
     "deviceSpecific": "Setări specifice dispozitivului",
@@ -1254,7 +1254,7 @@
         "userModel": "Reglat-fin"
       },
       "loadingAvailableModels": "Se încarcă modelele disponibile…",
-      "modelSelect": "Modelele disponibile pe Frigate+ pot fi selectate aici. Rețineți că pot fi selectate doar modelele compatibile cu configurația curentă a detectorului dumneavoastră.",
+      "modelSelect": "Modelele disponibile pe Frigate+ pot fi selectate aici. Rețineți că pot fi selectate doar modelele compatibile cu configurația actuală a detectorului dumneavoastră.",
       "baseModel": "Model de bază",
       "loading": "Se încarcă informațiile modelului…",
       "error": "Încărcarea informațiilor modelului a eșuat",
