feat: improvments for better uptime

--- a/web/public/locales/en/views/settings.json
+++ b/web/public/locales/en/views/settings.json
@@ -174,7 +174,7 @@
       "selectDetectionsZones": "Select zones for Detections",
       "limitDetections": "Limit detections to specific zones",
       "toast": {
-        "success": "Review Classification configuration has been saved. Restart Frigate to apply changes."
+        "success": "Review Classification configuration has been saved and applied."
       }
     }
   },
@@ -182,7 +182,6 @@
     "filter": {
       "all": "All Masks and Zones"
     },
-    "restart_required": "Restart required (masks/zones changed)",
     "toast": {
       "success": {
         "copyCoordinates": "Copied coordinates for {{polyName}} to clipboard."
@@ -293,7 +292,7 @@
         }
       },
       "toast": {
-        "success": "Zone ({{zoneName}}) has been saved. Restart Frigate to apply changes."
+        "success": "Zone ({{zoneName}}) has been saved and applied."
       }
     },
     "motionMasks": {
@@ -319,8 +318,8 @@
       },
       "toast": {
         "success": {
-          "title": "{{polygonName}} has been saved. Restart Frigate to apply changes.",
-          "noName": "Motion Mask has been saved. Restart Frigate to apply changes."
+          "title": "{{polygonName}} has been saved and applied.",
+          "noName": "Motion Mask has been saved and applied."
         }
       }
     },
@@ -344,8 +343,8 @@
       },
       "toast": {
         "success": {
-          "title": "{{polygonName}} has been saved. Restart Frigate to apply changes.",
-          "noName": "Object Mask has been saved. Restart Frigate to apply changes."
+          "title": "{{polygonName}} has been saved and applied.",
+          "noName": "Object Mask has been saved and applied."
         }
       }
     }
