--- a/web/public/locales/en/views/explore.json
+++ b/web/public/locales/en/views/explore.json
@@ -77,7 +77,7 @@
         "millisecondsToOffset": "Milliseconds to offset detect annotations by. <em>Default: 0</em>",
         "tips": "TIP: Imagine there is an event clip with a person walking from left to right. If the event timeline bounding box is consistently to the left of the person then the value should be decreased. Similarly, if a person is walking from left to right and the bounding box is consistently ahead of the person then the value should be increased.",
         "toast": {
-          "success": "Annotation offset for {{camera}} has been saved to the config file. Restart Frigate to apply your changes."
+          "success": "Annotation offset for {{camera}} has been saved and applied."
         }
       }
     },
