--- a/web/public/locales/en/components/player.json
+++ b/web/public/locales/en/components/player.json
@@ -9,7 +9,7 @@
   "livePlayerRequiredIOSVersion": "iOS 17.1 or greater is required for this live stream type.",
   "streamOffline": {
     "title": "Stream Offline",
-    "desc": "No frames have been received on the {{cameraName}} <code>detect</code> stream, check error logs"
+    "desc": "No frames have been received on the {{cameraName}}"
   },
   "cameraDisabled": "Camera is disabled",
   "stats": {
