--- a/web/public/locales/es/components/player.json
+++ b/web/public/locales/es/components/player.json
@@ -47,5 +47,18 @@
     }
   },
   "livePlayerRequiredIOSVersion": "Se requiere iOS 17.1 o superior para este tipo de transmisión en vivo.",
-  "noRecordingsFoundForThisTime": "No se encontraron grabaciones para este momento"
+  "noRecordingsFoundForThisTime": "No se encontraron grabaciones para este momento",
+  "screenshot": {
+    "button": {
+      "aria": "Tomar captura de pantalla",
+      "tooltip": "Tomar captura de pantalla"
+    },
+    "success": {
+      "captured": "Captura de pantalla tomada exitosamente"
+    },
+    "error": {
+      "noVideoElement": "No se encontró elemento de video",
+      "failed": "Error al tomar captura de pantalla"
+    }
+  }
 }
