--- a/web/public/locales/he/components/player.json
+++ b/web/public/locales/he/components/player.json
@@ -45,7 +45,20 @@
   "livePlayerRequiredIOSVersion": "נדרשת iOS 17.1 ומעלה עבור סוג השידור החי הזה.",
   "streamOffline": {
     "title": "זרם מצלמה לא זמין",
-    "desc": "לא התקבלו פריימים בזרם <code>detect</code> של {{cameraName}}, בדקו את יומני השגיאות"
+    "desc": "לא התקבלו פריימים בזרם {{cameraName}}"
   },
-  "cameraDisabled": "המצלמה מושבתת"
+  "cameraDisabled": "המצלמה מושבתת",
+  "screenshot": {
+    "button": {
+      "aria": "Take screenshot",
+      "tooltip": "Take screenshot"
+    },
+    "success": {
+      "captured": "Screenshot captured successfully"
+    },
+    "error": {
+      "noVideoElement": "No video element found",
+      "failed": "Failed to capture screenshot"
+    }
+  }
 }
