--- a/web/public/locales/ab/components/player.json
+++ b/web/public/locales/ab/components/player.json
@@ -1,1 +1,15 @@
-{}
+{
+  "screenshot": {
+    "button": {
+      "aria": "Take screenshot",
+      "tooltip": "Take screenshot"
+    },
+    "success": {
+      "captured": "Screenshot captured successfully"
+    },
+    "error": {
+      "noVideoElement": "No video element found",
+      "failed": "Failed to capture screenshot"
+    }
+  }
+}
