--- a/web/public/locales/ar/components/player.json
+++ b/web/public/locales/ar/components/player.json
@@ -4,5 +4,18 @@
   "noPreviewFoundFor": "لا يوجد معاينة لـ{{cameraName}}",
   "submitFrigatePlus": {
     "title": "هل ترغب بإرسال هذه الصوره الى Frigate+؟"
+  },
+  "screenshot": {
+    "button": {
+      "aria": "Take screenshot",
+      "tooltip": "Take screenshot"
+    },
+    "success": {
+      "captured": "Screenshot captured successfully"
+    },
+    "error": {
+      "noVideoElement": "No video element found",
+      "failed": "Failed to capture screenshot"
+    }
   }
 }
