--- a/web/public/locales/el/components/player.json
+++ b/web/public/locales/el/components/player.json
@@ -38,5 +38,18 @@
       }
     },
     "decodedFrames": "Αποκωδικοποιημένα Καρέ:"
+  },
+  "screenshot": {
+    "button": {
+      "aria": "Take screenshot",
+      "tooltip": "Take screenshot"
+    },
+    "success": {
+      "captured": "Screenshot captured successfully"
+    },
+    "error": {
+      "noVideoElement": "No video element found",
+      "failed": "Failed to capture screenshot"
+    }
   }
 }
