--- a/web/public/locales/id/components/player.json
+++ b/web/public/locales/id/components/player.json
@@ -16,5 +16,18 @@
     "streamType": {
       "title": "Tipe stream:"
     }
+  },
+  "screenshot": {
+    "button": {
+      "aria": "Take screenshot",
+      "tooltip": "Take screenshot"
+    },
+    "success": {
+      "captured": "Screenshot captured successfully"
+    },
+    "error": {
+      "noVideoElement": "No video element found",
+      "failed": "Failed to capture screenshot"
+    }
   }
 }
