--- a/web/public/locales/ja/components/player.json
+++ b/web/public/locales/ja/components/player.json
@@ -1,5 +1,18 @@
 {
   "noPreviewFound": "プレビューが見つかりません",
   "noRecordingsFoundForThisTime": "この時間帯に録画は見つかりませんでした",
-  "noPreviewFoundFor": "{{cameraName}} のプレビューが見つかりません"
+  "noPreviewFoundFor": "{{cameraName}} のプレビューが見つかりません",
+  "screenshot": {
+    "button": {
+      "aria": "Take screenshot",
+      "tooltip": "Take screenshot"
+    },
+    "success": {
+      "captured": "Screenshot captured successfully"
+    },
+    "error": {
+      "noVideoElement": "No video element found",
+      "failed": "Failed to capture screenshot"
+    }
+  }
 }
