--- a/web/public/locales/pl/components/player.json
+++ b/web/public/locales/pl/components/player.json
@@ -47,5 +47,18 @@
     "error": {
       "submitFrigatePlusFailed": "Nie udało się wysłać klatki do Frigate+"
     }
+  },
+  "screenshot": {
+    "button": {
+      "aria": "Take screenshot",
+      "tooltip": "Take screenshot"
+    },
+    "success": {
+      "captured": "Screenshot captured successfully"
+    },
+    "error": {
+      "noVideoElement": "No video element found",
+      "failed": "Failed to capture screenshot"
+    }
   }
 }
