--- a/web/public/locales/pt-BR/components/player.json
+++ b/web/public/locales/pt-BR/components/player.json
@@ -36,5 +36,18 @@
         "value": "{{droppedFrames}} quadros"
       }
     }
+  },
+  "screenshot": {
+    "button": {
+      "aria": "Take screenshot",
+      "tooltip": "Take screenshot"
+    },
+    "success": {
+      "captured": "Screenshot captured successfully"
+    },
+    "error": {
+      "noVideoElement": "No video element found",
+      "failed": "Failed to capture screenshot"
+    }
   }
 }
