--- a/web/public/locales/tr/components/player.json
+++ b/web/public/locales/tr/components/player.json
@@ -47,5 +47,18 @@
   "submitFrigatePlus": {
     "title": "Bu kare Frigate+'ya gönderilsin mi?",
     "submit": "Gönder"
+  },
+  "screenshot": {
+    "button": {
+      "aria": "Take screenshot",
+      "tooltip": "Take screenshot"
+    },
+    "success": {
+      "captured": "Screenshot captured successfully"
+    },
+    "error": {
+      "noVideoElement": "No video element found",
+      "failed": "Failed to capture screenshot"
+    }
   }
 }
