--- a/web/public/locales/vi/components/player.json
+++ b/web/public/locales/vi/components/player.json
@@ -47,5 +47,18 @@
     "title": "Luồng ngoại tuyến",
     "desc": "Không nhận được khung hình nào trên luồng <code>detect</code> của {{cameraName}}, hãy kiểm tra nhật ký lỗi"
   },
-  "cameraDisabled": "Camera đã bị tắt"
+  "cameraDisabled": "Camera đã bị tắt",
+  "screenshot": {
+    "button": {
+      "aria": "Take screenshot",
+      "tooltip": "Take screenshot"
+    },
+    "success": {
+      "captured": "Screenshot captured successfully"
+    },
+    "error": {
+      "noVideoElement": "No video element found",
+      "failed": "Failed to capture screenshot"
+    }
+  }
 }
