feat: per camera permissions (#27)
This also including some small fixes:
* preserve cursor position on refresh
* fix screenshot i18n
* show camera chip on hover
* improve no frames message
* delete thumbnail on cleanup
* update showReviewed to true

--- a/web/public/locales/hi/components/player.json
+++ b/web/public/locales/hi/components/player.json
@@ -4,5 +4,18 @@
   "noPreviewFoundFor": "{{cameraName}} के लिए कोई पूर्वावलोकन नहीं मिला",
   "submitFrigatePlus": {
     "title": "इस फ्रेम को फ्रिगेट+ पर सबमिट करें?"
+  ,
+  "screenshot": {
+    "button": {
+      "aria": "Take screenshot",
+      "tooltip": "Take screenshot"
+    },
+    "success": {
+      "captured": "Screenshot captured successfully"
+    },
+    "error": {
+      "noVideoElement": "No video element found",
+      "failed": "Failed to capture screenshot"
+    }
   }
 }
