--- a/web/public/locales/en/views/settings.json
+++ b/web/public/locales/en/views/settings.json
@@ -20,6 +20,7 @@
     "triggers": "Triggers",
     "debug": "Debug",
     "users": "Users",
+    "cameraPermissions": "Camera Permissions",
     "notifications": "Notifications",
     "frigateplus": "Frigate+"
   },
