fix: lint and i18n naming

--- a/web/public/locales/en/views/configEditor.json
+++ b/web/public/locales/en/views/configEditor.json
@@ -1,5 +1,5 @@
 {
-  "documentTitle": "Config Editor - Frigate",
+  "documentTitle": "Config Editor - Caesar",
   "configEditor": "Config Editor",
   "copyConfig": "Copy Config",
   "saveAndRestart": "Save & Restart",
