--- a/web/public/locales/en/views/explore.json
+++ b/web/public/locales/en/views/explore.json
@@ -1,5 +1,5 @@
 {
-  "documentTitle": "Explore - Frigate",
+  "documentTitle": "Explore - Caesar",
   "generativeAI": "Generative AI",
   "exploreMore": "Explore more {{label}} objects",
   "exploreIsUnavailable": {
@@ -16,7 +16,7 @@
       }
     },
     "downloadingModels": {
-      "context": "Frigate is downloading the necessary embeddings models to support the Semantic Search feature. This may take several minutes depending on the speed of your network connection.",
+      "context": "Caesar is downloading the necessary embeddings models to support the Semantic Search feature. This may take several minutes depending on the speed of your network connection.",
       "setup": {
         "visionModel": "Vision model",
         "visionModelFeatureExtractor": "Vision model feature extractor",
@@ -97,7 +97,7 @@
       "tips": {
         "mismatch_one": "{{count}} unavailable object was detected and included in this review item. Those objects either did not qualify as an alert or detection or have already been cleaned up/deleted.",
         "mismatch_other": "{{count}} unavailable objects were detected and included in this review item. Those objects either did not qualify as an alert or detection or have already been cleaned up/deleted.",
-        "hasMissingObjects": "Adjust your configuration if you want Frigate to save tracked objects for the following labels: <em>{{objects}}</em>"
+        "hasMissingObjects": "Adjust your configuration if you want Caesar to save tracked objects for the following labels: <em>{{objects}}</em>"
       },
       "toast": {
         "success": {
@@ -146,7 +146,7 @@
     "description": {
       "label": "Description",
       "placeholder": "Description of the tracked object",
-      "aiTips": "Frigate will not request a description from your Generative AI provider until the tracked object's lifecycle has ended."
+      "aiTips": "Caesar will not request a description from your Generative AI provider until the tracked object's lifecycle has ended."
     },
     "expandRegenerationMenu": "Expand regeneration menu",
     "regenerateFromSnapshot": "Regenerate from Snapshot",
