--- a/web/public/locales/en/views/live.json
+++ b/web/public/locales/en/views/live.json
@@ -1,6 +1,6 @@
 {
-  "documentTitle": "Live - Frigate",
-  "documentTitle.withCamera": "{{camera}} - Live - Frigate",
+  "documentTitle": "Live - Caesar",
+  "documentTitle.withCamera": "{{camera}} - Live - Caesar",
   "lowBandwidthMode": "Low-bandwidth Mode",
   "twoWayTalk": {
     "enable": "Enable Two Way Talk",
