--- a/web/public/locales/en/views/settings.json
+++ b/web/public/locales/en/views/settings.json
@@ -1,15 +1,15 @@
 {
   "documentTitle": {
-    "default": "Settings - Frigate",
-    "authentication": "Authentication Settings - Frigate",
-    "camera": "Camera Settings - Frigate",
-    "enrichments": "Enrichments Settings - Frigate",
-    "masksAndZones": "Mask and Zone Editor - Frigate",
-    "motionTuner": "Motion Tuner - Frigate",
-    "object": "Debug - Frigate",
-    "general": "General Settings - Frigate",
-    "frigatePlus": "Frigate+ Settings - Frigate",
-    "notifications": "Notification Settings - Frigate"
+    "default": "Settings - Caesar",
+    "authentication": "Authentication Settings - Caesar",
+    "camera": "Camera Settings - Caesar",
+    "enrichments": "Enrichments Settings - Caesar",
+    "masksAndZones": "Mask and Zone Editor - Caesar",
+    "motionTuner": "Motion Tuner - Caesar",
+    "object": "Debug - Caesar",
+    "general": "General Settings - Caesar",
+    "frigatePlus": "Frigate+ Settings - Caesar",
+    "notifications": "Notification Settings - Caesar"
   },
   "menu": {
     "ui": "UI",
@@ -92,7 +92,8 @@
     },
     "semanticSearch": {
       "title": "Semantic Search",
-      "desc": "Semantic Search in Frigate allows you to find tracked objects within your review items using either the image itself, a user-defined text description, or an automatically generated one.",
+      "desc": "Semantic Search in Caesar allows you to find tracked objects within your review items using either the image itself, a user-defined text description, or an automatically generated one.",
+      "readTheDocumentation": "Read the Documentation",
       "reindexNow": {
         "label": "Reindex Now",
         "desc": "Reindexing will regenerate embeddings for all tracked object. This process runs in the background and may max out your CPU and take a fair amount of time depending on the number of tracked objects you have.",
@@ -118,7 +119,8 @@
     },
     "faceRecognition": {
       "title": "Face Recognition",
-      "desc": "Face recognition allows people to be assigned names and when their face is recognized Frigate will assign the person's name as a sub label. This information is included in the UI, filters, as well as in notifications.",
+      "desc": "Face recognition allows people to be assigned names and when their face is recognized Caesar will assign the person's name as a sub label. This information is included in the UI, filters, as well as in notifications.",
+      "readTheDocumentation": "Read the Documentation",
       "modelSize": {
         "label": "Model Size",
         "desc": "The size of the model used for face recognition.",
@@ -134,11 +136,12 @@
     },
     "licensePlateRecognition": {
       "title": "License Plate Recognition",
-      "desc": "Frigate can recognize license plates on vehicles and automatically add the detected characters to the recognized_license_plate field or a known name as a sub_label to objects that are of type car. A common use case may be to read the license plates of cars pulling into a driveway or cars passing by on a street."
+      "desc": "Caesar can recognize license plates on vehicles and automatically add the detected characters to the recognized_license_plate field or a known name as a sub_label to objects that are of type car. A common use case may be to read the license plates of cars pulling into a driveway or cars passing by on a street.",
+      "readTheDocumentation": "Read the Documentation"
     },
     "restart_required": "Restart required (Enrichments settings changed)",
     "toast": {
-      "success": "Enrichments settings have been saved. Restart Frigate to apply your changes.",
+      "success": "Enrichments settings have been saved. Restart Caesar to apply your changes.",
       "error": "Failed to save config changes: {{errorMessage}}"
     }
   },
@@ -146,7 +149,7 @@
     "title": "Camera Settings",
     "streams": {
       "title": "Streams",
-      "desc": "Temporarily disable a camera until Frigate restarts. Disabling a camera completely stops Frigate's processing of this camera's streams. Detection, recording, and debugging will be unavailable.<br /> <em>Note: This does not disable go2rtc restreams.</em>"
+      "desc": "Temporarily disable a camera until Caesar restarts. Disabling a camera completely stops Caesar's processing of this camera's streams. Detection, recording, and debugging will be unavailable.<br /> <em>Note: This does not disable go2rtc restreams.</em>"
     },
     "object_descriptions": {
       "title": "Generative AI Object Descriptions",
@@ -158,14 +161,14 @@
     },
     "review": {
       "title": "Review",
-      "desc": "Temporarily enable/disable alerts and detections for this camera until Frigate restarts. When disabled, no new review items will be generated. ",
+      "desc": "Temporarily enable/disable alerts and detections for this camera until Caesar restarts. When disabled, no new review items will be generated. ",
       "alerts": "Alerts ",
       "detections": "Detections "
     },
     "reviewClassification": {
       "title": "Review Classification",
-      "desc": "Frigate categorizes review items as Alerts and Detections. By default, all <em>person</em> and <em>car</em> objects are considered Alerts. You can refine categorization of your review items by configuring required zones for them.",
-
+      "desc": "Caesar categorizes review items as Alerts and Detections. By default, all <em>person</em> and <em>car</em> objects are considered Alerts. You can refine categorization of your review items by configuring required zones for them.",
+      "readTheDocumentation": "Read the Documentation",
       "noDefinedZones": "No zones are defined for this camera.",
       "objectAlertsTips": "All {{alertsLabels}} objects on {{cameraName}} will be shown as Alerts.",
       "zoneObjectAlertsTips": "All {{alertsLabels}} objects detected in {{zone}} on {{cameraName}} will be shown as Alerts.",
@@ -279,7 +282,7 @@
     },
     "zones": {
       "label": "Zones",
-      "documentTitle": "Edit Zone - Frigate",
+      "documentTitle": "Edit Zone - Caesar",
       "desc": {
         "title": "Zones allow you to define a specific area of the frame so you can determine whether or not an object is within a particular area.",
         "documentation": "Documentation"
@@ -331,7 +334,7 @@
     },
     "motionMasks": {
       "label": "Motion Mask",
-      "documentTitle": "Edit Motion Mask - Frigate",
+      "documentTitle": "Edit Motion Mask - Caesar",
       "desc": {
         "title": "Motion masks are used to prevent unwanted types of motion from triggering detection. Over masking will make it more difficult for objects to be tracked.",
         "documentation": "Documentation"
@@ -357,7 +360,7 @@
     },
     "objectMasks": {
       "label": "Object Masks",
-      "documentTitle": "Edit Object Mask - Frigate",
+      "documentTitle": "Edit Object Mask - Caesar",
       "desc": {
         "title": "Object filter masks are used to filter out false positives for a given object type based on location.",
         "documentation": "Documentation"
@@ -385,7 +388,7 @@
     "title": "Motion Detection Tuner",
     "unsavedChanges": "Unsaved Motion Tuner changes ({{camera}})",
     "desc": {
-      "title": "Frigate uses motion detection as a first line check to see if there is anything happening in the frame worth checking with object detection.",
+      "title": "Caesar uses motion detection as a first line check to see if there is anything happening in the frame worth checking with object detection.",
       "documentation": "Read the Motion Tuning Guide"
     },
     "Threshold": {
@@ -406,7 +409,7 @@
   },
   "debug": {
     "title": "Debug",
-    "detectorDesc": "Frigate uses your detectors ({{detectors}}) to detect objects in your camera's video stream.",
+    "detectorDesc": "Caesar uses your detectors ({{detectors}}) to detect objects in your camera's video stream.",
     "desc": "Debugging view shows a real-time view of tracked objects and their statistics. The object list shows a time-delayed summary of detected objects.",
     "openCameraWebUI": "Open {{camera}}'s Web UI",
     "debugging": "Debugging",
