--- a/web/public/locales/en/views/events.json
+++ b/web/public/locales/en/views/events.json
@@ -41,5 +41,7 @@
         "share": "Share this recording"
       }
     }
-  }
+  },
+  "suspiciousActivity": "Suspicious Activity",
+  "threateningActivity": "Threatening Activity"
 }
