feat: a better than ever live streaming

--- a/web/public/locales/en/common.json
+++ b/web/public/locales/en/common.json
@@ -110,6 +110,7 @@
     "on": "ON",
     "off": "OFF",
     "edit": "Edit",
+    "change": "Change",
     "copyCoordinates": "Copy coordinates",
     "delete": "Delete",
     "yes": "Yes",
