--- a/web/public/locales/en/common.json
+++ b/web/public/locales/en/common.json
@@ -263,5 +263,6 @@
     "title": "404",
     "desc": "Page not found"
   },
-  "selectItem": "Select {{item}}"
+  "selectItem": "Select {{item}}",
+  "readTheDocumentation": "Read the documentation"
 }
